--- a/ProjectoEsw/Views/Principal/Login.cshtml
+++ b/ProjectoEsw/Views/Principal/Login.cshtml
@@ -2,7 +2,7 @@
 
 
 
-<form class="form-horizontal" asp-controller="Account" asp-action="Login" method="POST">
+<form class="form-horizontal" asp-controller="Principal" asp-action="Login" method="POST">
     <h1>login</h1>
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
