--- a/ProjectoEsw/Views/Principal/Register.cshtml
+++ b/ProjectoEsw/Views/Principal/Register.cshtml
@@ -3,7 +3,7 @@
 
 
 
-<form class="form-horizontal" asp-controller="Account" asp-action ="Register" method="POST">
+<form class="form-horizontal" asp-controller="Principal" asp-action ="Register" method="POST">
     <h1>_________REGISTO__________</h1>
     <div asp-validation-summary="All" class="text-danger"></div>
         <div class="form-group">
