--- a/ProjectoEsw/Views/Principal/Login.cshtml
+++ b/ProjectoEsw/Views/Principal/Login.cshtml
@@ -1,27 +1,23 @@
-﻿@model ProjectoEsw.Models.Identity.LoginViewModel;
+﻿
+@model ProjectoEsw.Models.Identity.LoginViewModel;
 
-
-
-<form class="form-horizontal" asp-controller="Principal" asp-action="Login" method="POST">
-    <h1>login</h1>
-    <div asp-validation-summary="All" class="text-danger"></div>
-    <div class="form-group">
-        <label asp-for="Email" class="col-sm-2 control-label"></label>
-        <div class="col-sm-10">
-            <input asp-for="Email" class="form-control" />
-            <span asp-validation-for="Email" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="Password" class="col-sm-2 control-label"></label>
-            <div class="col-sm-10">
-                <input asp-for="Password" class="form-control">
+<div class="jumbotron col-sm-10 col-sm-offset-1">
+    <div class="container col-lg-offset-2 col-sm-8">
+        <h2 class="text-center">Login</h2>
+        <form class="form-horizontal" asp-controller="Principal" asp-action="Login" method="POST">
+            <div asp-validation-summary="All" class="text-danger"></div>
+            <div class="form-group">
+                <div class=" help-block"></div>
+                <input asp-for="Email" placeholder="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+                <div class=" help-block"></div>
+                <input asp-for="Password" placeholder="Password" class="form-control">
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
+            <div class="form-group">
                 <button type="submit" class="btn btn-default">Sign in</button>
+                <a asp-area="" asp-controller="" asp-action="" class="btn btn-link btn-xs">Recuperar Password</a>
             </div>
-        </div>
-     </div>
-</form>
+        </form>
+    </div>
+    </div>
