--- a/ProjectoEsw/Views/Shared/_Layout.cshtml
+++ b/ProjectoEsw/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - ProjectoEsw</title>
-    
+
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
@@ -15,30 +15,53 @@
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
+
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">ProjectoEsw</a>
+    <div class="container">
+        <div class="row">
+            <div>
+                <a asp-area="" asp-controller="Principal" asp-action="Login" class="btn btn-link btn-xs pull-right">Recuperar Password</a>
+                <a asp-area="" asp-controller="Principal" asp-action="Register" class="btn btn-link btn-xs pull-right">Registar</a>
+                <a asp-area="" asp-controller="Principal" asp-action="Login" class="btn btn-link btn-xs pull-right">Login</a>
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                </ul>
+            <div class="col-sm-2">
+                <div class="sidebar-nav">
+                    <img src="~/images/LogoIpsFinal.png" />
+                    <div class="help-block"></div>
+                    <div class="navbar" role="navigation">
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar-navbar-collapse">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                            <span class="visible-xs navbar-brand">Sidebar menu</span>
+                        </div>
+                        <div class="well text-center" role="button">
+                            <a asp-area="" asp-controller="Principal" asp-action="Index">Home</a>
+                        </div>  
+                        <div class="well text-center" role="button">
+                            Programas Mobilidade
+                        </div>
+                        <div class="well text-center" role="button">
+                            Bolsas
+                        </div>
+                        <div class="well text-center" role="button">
+                            Sobre Nós
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-10">
+                <div class="help-block"></div>
+                @RenderBody()
+
             </div>
         </div>
-    </nav>
+    </div>
     <div class="container body-content">
-        @RenderBody()
         <hr />
         <footer>
             <p>&copy; 2017 - ProjectoEsw</p>
@@ -50,7 +73,7 @@
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-        <script src ="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+        <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment exclude="Development">
@@ -72,7 +95,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
-    
+
     @RenderSection("Scripts", required: false)
 </body>
 </html>
