--- a/ProjectoEsw/Views/Principal/Register.cshtml
+++ b/ProjectoEsw/Views/Principal/Register.cshtml
@@ -13,6 +13,13 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
         </div>
+    <div class="form-group">
+        <label asp-for="NomeCompleto" class="col-sm-2 control-label"></label>
+        <div class="col-sm-10">
+            <input asp-for="NomeCompleto" class="form-control">
+            <span asp-validation-for="NomeCompleto" class="text-danger"></span>
+        </div>
+    </div>
         <div class="form-group">
             <label asp-for="Password" class="col-sm-2 control-label"></label>
             <div class="col-sm-10">
