View Recuperar Password, Bugs Fixed

--- a/ProjectoEsw/Views/Principal/Register.cshtml
+++ b/ProjectoEsw/Views/Principal/Register.cshtml
@@ -13,7 +13,10 @@
                 <input asp-for="DataNasc" class="form-control" />
                 <span asp-validation-for="DataNasc" class="text-danger"></span>
                 <div class=" help-block"></div>
-                <input asp-for="NumeroIdentificacao " placeholder="Numero de Identificação" class="form-control" />
+                <input asp-for="Nif" placeholder="Numero de Identifição fiscal" class="form-control"/>
+                <span asp-validation-for="Nif" class="text-danger"></span>
+                <div class=" help-block"></div>
+                <input asp-for="NumeroIdentificacao" placeholder="Numero de Identifição" class="form-control"/>
                 <span asp-validation-for="NumeroIdentificacao" class="text-danger"></span>
                 <div class=" help-block"></div>
                 <input asp-for="Telefone" placeholder="Numero de Telefone" class="form-control" />
