--- a/ProjectoEsw/Views/Shared/_Layout.cshtml
+++ b/ProjectoEsw/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
     <div class="container">
         <div class="row">
             <div>
-                <a asp-area="" asp-controller="Principal" asp-action="Login" class="btn btn-link btn-xs pull-right">Recuperar Password</a>
+                <a asp-area="" asp-controller="UtilizadorRegistado" asp-action="RecuperarPassword?" class="btn btn-link btn-xs pull-right">Recuperar Password</a>
                 <a asp-area="" asp-controller="Principal" asp-action="Register" class="btn btn-link btn-xs pull-right">Registar</a>
                 <a asp-area="" asp-controller="Principal" asp-action="Login" class="btn btn-link btn-xs pull-right">Login</a>
             </div>
@@ -67,8 +67,6 @@
             <p>&copy; 2017 - ProjectoEsw</p>
         </footer>
     </div>
-
-
 
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
