--- a/ProjectoEsw/Views/Principal/Login.cshtml
+++ b/ProjectoEsw/Views/Principal/Login.cshtml
@@ -16,7 +16,7 @@
             </div>
             <div class="form-group">
                 <button type="submit" class="btn btn-default">Sign in</button>
-                <a asp-area="" asp-controller="" asp-action="" class="btn btn-link btn-xs">Recuperar Password</a>
+                <a asp-area="" asp-controller="UtilizadorRegistado" asp-action="RecuperarPassword" class="btn btn-link btn-xs">Recuperar Password</a>
             </div>
         </form>
     </div>
