--- a/ProjectoEsw/wwwroot/css/site.css
+++ b/ProjectoEsw/wwwroot/css/site.css
@@ -33,3 +33,8 @@
         display: none;
     }
 }
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
