--- a/ProjectoEsw/Views/Home/Login.cshtml
+++ b/ProjectoEsw/Views/Home/Login.cshtml
@@ -4,7 +4,7 @@
 <div class="jumbotron col-sm-10 col-sm-offset-1">
     <div class="container col-lg-offset-2 col-sm-8">
         <h2 class="text-center">Login</h2>
-        <form class="form-horizontal" asp-controller="Principal" asp-action="Login" method="POST">
+        <form class="form-horizontal" asp-controller="Home" asp-action="Login" method="POST">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <div class=" help-block"></div>
