perfil,views section links

--- a/ProjectoEsw/Views/Candidato/EditarPerfil.cshtml
+++ b/ProjectoEsw/Views/Candidato/EditarPerfil.cshtml
@@ -4,7 +4,7 @@
 <div class="jumbotron col-sm-10 col-sm-offset-1">
     <div class="container col-lg-offset-2 col-sm-8">
         <h2 class="text-center">Editar Perfil</h2>
-        <form class="form-horizontal" asp-controller="UtilizadorRegistado" asp-action="EditarPerfil" method="post">
+        <form class="form-horizontal" asp-controller="Candidato" asp-action="EditarPerfil" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <div class=" help-block"></div>
@@ -29,7 +29,7 @@
 <div class="jumbotron col-sm-10 col-sm-offset-1">
     <div class="container col-lg-offset-2 col-sm-8">
         <h2 class="text-center">Alterar Password</h2>
-        <form class="form-horizontal" asp-controller="UtilizadorRegistado" asp-action="EditarPerfil" method="post">
+        <form class="form-horizontal" asp-controller="Candidato" asp-action="AlterarPassword" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <div class=" help-block"></div>
