--- a/ProjectoEsw/Views/Home/Register.cshtml
+++ b/ProjectoEsw/Views/Home/Register.cshtml
@@ -1,5 +1,12 @@
 ﻿@model ProjectoEsw.Models.Identity.RegisterViewModel;
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
+
+@section links {
+    <a asp-area="" asp-controller="Home" asp-action="RecuperarPassword?" class="btn btn-link btn-xs pull-right">Recuperar Password</a>
+    <a asp-area="" asp-controller="Home" asp-action="Register" class="btn btn-link btn-xs pull-right">Registar</a>
+    <a asp-area="" asp-controller="Home" asp-action="Login" class="btn btn-link btn-xs pull-right">Login</a>
+}
+
 <div class="jumbotron col-sm-10 col-sm-offset-1">
     <div class="container col-lg-offset-2 col-sm-8">
         <h2 class="text-center">REGISTO</h2>
