--- a/ProjectoEsw/Views/Shared/_Layout.cshtml
+++ b/ProjectoEsw/Views/Shared/_Layout.cshtml
@@ -21,9 +21,7 @@
     <div class="container">
         <div class="row">
             <div>
-                <a asp-area="" asp-controller="UtilizadorRegistado" asp-action="RecuperarPassword?" class="btn btn-link btn-xs pull-right">Recuperar Password</a>
-                <a asp-area="" asp-controller="Home" asp-action="Register" class="btn btn-link btn-xs pull-right">Registar</a>
-                <a asp-area="" asp-controller="Home" asp-action="Login" class="btn btn-link btn-xs pull-right">Login</a>
+                @RenderSection("links", required: true);                
             </div>
             <div class="col-sm-2">
                 <div class="sidebar-nav">
