--- a/ProjectoEsw/Views/Home/RecuperarPassword.cshtml
+++ b/ProjectoEsw/Views/Home/RecuperarPassword.cshtml
@@ -1,12 +1,17 @@
 ﻿@model ProjectoEsw.Models.ViewModels.RecuperarPassViewModel
 @{
-    ViewData["Title"] = "RecuperarPassword";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewData["Title"] = "Recuperar Password";
+}
+
+@section links {
+    <a asp-area="" asp-controller="Home" asp-action="RecuperarPassword?" class="btn btn-link btn-xs pull-right">Recuperar Password</a>
+    <a asp-area="" asp-controller="Home" asp-action="Register" class="btn btn-link btn-xs pull-right">Registar</a>
+    <a asp-area="" asp-controller="Home" asp-action="Login" class="btn btn-link btn-xs pull-right">Login</a>
 }
 <div class="jumbotron col-sm-10 col-sm-offset-1">
     <div class="container col-lg-offset-2 col-sm-8">
-        <h2 class="text-center">Recuperar Password</h2>
-        <form class="form-horizontal" asp-controller="UtilizadorRegistado" asp-action="RecuperarPassword" method="post">
+        <h2 class="text-center">@ViewData["Title"]</h2>
+        <form class="form-horizontal" asp-controller="Home" asp-action="RecuperarPassword" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <div class=" help-block"></div>
