--- a/ProjectoEsw/Views/Home/index.cshtml
+++ b/ProjectoEsw/Views/Home/index.cshtml
@@ -1,6 +1,12 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+
+@section links {
+    <a asp-area="" asp-controller="Home" asp-action="RecuperarPassword?" class="btn btn-link btn-xs pull-right">Recuperar Password</a>
+    <a asp-area="" asp-controller="Home" asp-action="Register" class="btn btn-link btn-xs pull-right">Registar</a>
+    <a asp-area="" asp-controller="Home" asp-action="Login" class="btn btn-link btn-xs pull-right">Login</a>
+ }
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="9000">
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
