upload to smarterAsp

--- a/ProjectoEsw/Views/Candidato/EditarPerfil.cshtml
+++ b/ProjectoEsw/Views/Candidato/EditarPerfil.cshtml
@@ -1,6 +1,13 @@
 ﻿<!-- ProjectoEsw.Models.Identity.Perfil -->
 @model ProjectoEsw.Models.Identity.RegisterViewModel
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
+
+@section links {
+    <a asp-area="" asp-controller="Candidato" asp-action="Perfil" class="btn btn-link btn-xs pull-right"> @Html.DisplayFor(model => model.Email) </a>
+    <a asp-area="" asp-controller="Candidato" asp-action="Logout" class="btn btn-link btn-xs pull-right">Log Out</a>
+    <a asp-area="" asp-controller="Home" asp-action="Login" class="btn btn-link btn-xs pull-right">Login</a>
+}
+
 <div class="jumbotron col-sm-10 col-sm-offset-1">
     <div class="container col-lg-offset-2 col-sm-8">
         <h2 class="text-center">Editar Perfil</h2>
@@ -11,10 +18,10 @@
                 <input asp-for="Email" placeholder="Novo Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
                 <div class=" help-block"></div>
-                <input asp-for="Morada" placeholder="Novo Numero de Telefone" class="form-control" />
+                <input asp-for="Morada" placeholder="Novo Morada" class="form-control" />
                 <span asp-validation-for="Morada" class="text-danger"></span>
                 <div class=" help-block"></div>
-                <input asp-for="Telefone" placeholder="Nova Morada" class="form-control" />
+                <input asp-for="Telefone" placeholder="Telefone" class="form-control" />
                 <span asp-validation-for="Telefone" class="text-danger"></span>
                 <div class=" help-block"></div>
             </div>
