--- a/ProjectoEsw/Views/Home/Login.cshtml
+++ b/ProjectoEsw/Views/Home/Login.cshtml
@@ -2,7 +2,7 @@
 @model ProjectoEsw.Models.Identity.LoginViewModel;
 
 @section links {
-    <a asp-area="" asp-controller="Home" asp-action="RecuperarPassword?" class="btn btn-link btn-xs pull-right">Recuperar Password</a>
+    <a asp-area="" asp-controller="Home" asp-action="RecuperarPassword" class="btn btn-link btn-xs pull-right">Recuperar Password</a>
     <a asp-area="" asp-controller="Home" asp-action="Register" class="btn btn-link btn-xs pull-right">Registar</a>
     <a asp-area="" asp-controller="Home" asp-action="Login" class="btn btn-link btn-xs pull-right">Login</a>
 }
