--- a/ProjectoEsw/Views/Home/RecuperarPassword.cshtml
+++ b/ProjectoEsw/Views/Home/RecuperarPassword.cshtml
@@ -4,7 +4,7 @@
 }
 
 @section links {
-    <a asp-area="" asp-controller="Home" asp-action="RecuperarPassword?" class="btn btn-link btn-xs pull-right">Recuperar Password</a>
+    <a asp-area="" asp-controller="Home" asp-action="RecuperarPassword" class="btn btn-link btn-xs pull-right">Recuperar Password</a>
     <a asp-area="" asp-controller="Home" asp-action="Register" class="btn btn-link btn-xs pull-right">Registar</a>
     <a asp-area="" asp-controller="Home" asp-action="Login" class="btn btn-link btn-xs pull-right">Login</a>
 }
