email confirmation, correct dumbstuff, error view, gestor email,clean gestor

--- a/ProjectoEsw/Views/Home/Register.cshtml
+++ b/ProjectoEsw/Views/Home/Register.cshtml
@@ -10,7 +10,7 @@
 <div class="jumbotron col-sm-10 col-sm-offset-1">
     <div class="container col-lg-offset-2 col-sm-8">
         <h2 class="text-center">REGISTO</h2>
-        <form class="form-horizontal" asp-controller="Home" asp-action="Register" method="POST">
+        <form class="form-horizontal" asp-controller="Home" asp-action="Register" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <div class=" help-block"></div>
