--- a/ProjectoEsw/Views/Home/ConfirmarEmail.cshtml
+++ b/ProjectoEsw/Views/Home/ConfirmarEmail.cshtml
@@ -8,6 +8,9 @@
     <a asp-area="" asp-controller="Home" asp-action="Register" class="btn btn-link btn-xs pull-right">Registar</a>
     <a asp-area="" asp-controller="Home" asp-action="Login" class="btn btn-link btn-xs pull-right">Login</a>
 }
+<div class="jumbotron">
+    <h2 class=" text-center"><strong>ConfirmarEmail</strong></h2>
+    <p><strong>Registo concluido. Para começar usar o website do CIMOB é necessario a validacao do seu email, para tal tera de se deslocar a caixa de correio do seu email onde tera o email com o link de validação </strong></p>
+</div>
 
-<h2>ConfirmarEmail</h2>
 
