--- a/ProjectoEsw/Views/Home/Login.cshtml
+++ b/ProjectoEsw/Views/Home/Login.cshtml
@@ -14,10 +14,10 @@
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <div class=" help-block"></div>
-                <input asp-for="Email" placeholder="Email" class="form-control" />
+                <input asp-for="Email" placeholder="Email" class="form-control" class="form-control" data-toggle="popover" data-trigger="hover" data-content="Para efectuar o login é necessario inserir neste campo o email com que se registou" />
                 <span asp-validation-for="Email" class="text-danger"></span>
                 <div class=" help-block"></div>
-                <input asp-for="Password" placeholder="Password" class="form-control">
+                <input asp-for="Password" placeholder="Password" class="form-control" class="form-control" data-toggle="popover" data-trigger="hover" data-content="Para efectuar o login é necessario inserir neste campo a password da sua conta">
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
