--- a/ProjectoEsw/Views/Home/RecuperarPassword.cshtml
+++ b/ProjectoEsw/Views/Home/RecuperarPassword.cshtml
@@ -17,7 +17,7 @@
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <div class=" help-block"></div>
-                <input asp-for="Email" placeholder="Email" class="form-control" />
+                <input asp-for="Email" placeholder="Email" class="form-control" class="form-control" data-toggle="popover" data-trigger="hover" data-content="Para recuperar password precisa de inserir o email com que se registou para poder alterar a sua password" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
