--- a/ProjectoEsw/Views/Home/ConfirmarEmail.cshtml
+++ b/ProjectoEsw/Views/Home/ConfirmarEmail.cshtml
@@ -11,6 +11,7 @@
 <div class="jumbotron">
     <h2 class=" text-center"><strong>ConfirmarEmail</strong></h2>
     <p><strong>Registo concluido. Para começar usar o website do CIMOB é necessario a validacao do seu email, para tal tera de se deslocar a caixa de correio do seu email onde tera o email com o link de validação </strong></p>
+    <a asp-area="" asp-controller="Home" asp-action="Index" class="btn btn-link btn-xs text-center">Voltar Pagina Inicial</a>
 </div>
 
 
