--- a/ProjectoEsw/Views/Home/Error.cshtml
+++ b/ProjectoEsw/Views/Home/Error.cshtml
@@ -9,5 +9,8 @@
     <a asp-area="" asp-controller="Home" asp-action="Login" class="btn btn-link btn-xs pull-right">Login</a>
 }
 
-<h2>Error</h2>
-
+<div class="jumbotron">
+    <h2 class=" text-center"><strong>Erro</strong></h2>
+    <p><strong>Aconteceu um erro ao fazer o login </strong></p>
+    <a asp-area="" asp-controller="Home" asp-action="Index" class="btn btn-link btn-xs text-center">Voltar Pagina Inicial</a>
+</div>
