--- a/ProjectoEsw/Views/Candidato/Index.cshtml
+++ b/ProjectoEsw/Views/Candidato/Index.cshtml
@@ -12,11 +12,11 @@
             <div class="col-sm-offset-3">
                 @if (@Model.NomeCompleto == null)
                 {
-                    <p><small>Sem Informação</small></p>
+                    <h5>Sem Informação</h5>
                 }
                 else
                 {
-                    <p><small>@Model.NomeCompleto</small></p>
+                    <h5>@Model.NomeCompleto</h5>
                 }
             </div>
         </div>
@@ -25,50 +25,50 @@
             <div class="col-sm-offset-3">
                 @if (@Model.DataNasc == null)
             {
-                    <p><small>Sem Informação</small></p>
+                    <h5>Sem Informação</h5>
                 }
                 else
                 {
-                    <p><small>@Model.DataNasc</small></p>
+                    <h5>@Model.DataNasc</h5>
                 }
-            </div>
+</div>
         </div>
         <div class="col-sm-12">
             <label asp-for="Morada" class="col-sm-3 control-label"></label>
             <div class="col-sm-offset-3">
                 @if (@Model.Morada == null)
             {
-                    <p><small>Sem Informação</small></p>
+                    <h5>Sem Informação</h5>
                 }
                 else
                 {
-                    <p><small>@Model.Morada</small></p>
+                    <h5> @Model.Morada</h5>
                 }
-            </div>
+</div>
         </div>
         <div class="col-sm-12">
             <label asp-for="Email" class="col-sm-3 control-label"></label>
             <div class="col-sm-offset-3">
                 @if (@Model.Email == null)
             {
-                    <p><small>Sem Informação</small></p>
+                    <h5>Sem Informação</h5>
                 }
                 else
                 {
-                    <p><small>@Model.Email</small></p>
-                }
-            </div>
+                    <h5>@Model.Email</h5>
+                        }
+</div>
         </div>
         <div class="col-sm-12">
             <label asp-for="Nif" class="col-sm-3 control-label"></label>
             <div class="col-sm-offset-3">
                 @if (@Model.Nif == 0)
-            {
-                    <p><small>Sem Informação</small></p>
+                {
+                    <h5>Sem Informação</h5>
                 }
                 else
                 {
-                    <p><small>@Model.Nif</small></p>
+                    <h5>@Model.Nif</h5>
                 }
             </div>
         </div>
@@ -76,12 +76,12 @@
             <label asp-for="NumeroIdentificacao" class="col-sm-3 control-label"></label>
             <div class="col-sm-offset-3">
                 @if (@Model.NumeroIdentificacao == 0)
-            {
-                    <p><small>Sem Informação</small></p>
+             {
+                    <h5>Sem Informação</h5>
                 }
                 else
                 {
-                    <p><small>@Model.NumeroIdentificacao</small></p>
+                    <h5>@Model.NumeroIdentificacao</h5>
                 }
             </div>
         </div>
@@ -90,11 +90,11 @@
             <div class="col-sm-offset-3">
                 @if (@Model.Telefone == null)
             {
-                    <p><small>Sem Informação</small></p>
+                    <h5>Sem Informação</h5>
                 }
                 else
                 {
-                    <p><small>@Model.Telefone</small></p>
+                    <h5>@Model.Telefone</h5>
                 }
             </div>
         </div>
