Developer Gestor Ajuda Versao 1.3

--- a/ProjectoEsw/Views/Home/RecuperarPassword.cshtml
+++ b/ProjectoEsw/Views/Home/RecuperarPassword.cshtml
@@ -1,4 +1,5 @@
-﻿@model ProjectoEsw.Models.ViewModels.RecuperarPassViewModel
+﻿@inject ProjectoEsw.GestorAplicacao.GestorAjudas gestorAjudas;
+@model ProjectoEsw.Models.ViewModels.RecuperarPassViewModel
 @{
     ViewData["Title"] = "Recuperar Password";
 }
@@ -17,7 +18,7 @@
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <div class=" help-block"></div>
-                <input asp-for="Email" placeholder="Email" class="form-control" class="form-control" data-toggle="popover" data-trigger="hover" data-content="Para recuperar password precisa de inserir o email com que se registou para poder alterar a sua password" />
+                <input asp-for="Email" placeholder="Email" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.RecuperarPassword","Email").Descricao" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
