--- a/ProjectoEsw/Views/Candidato/EditarPerfil.cshtml
+++ b/ProjectoEsw/Views/Candidato/EditarPerfil.cshtml
@@ -1,4 +1,5 @@
 ﻿<!-- ProjectoEsw.Models.Identity.Perfil -->
+@inject ProjectoEsw.GestorAplicacao.GestorAjudas gestorAjudas
 @model ProjectoEsw.Models.Identity.RegisterViewModel
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
 
@@ -15,13 +16,13 @@
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <div class=" help-block"></div>
-                <input asp-for="Email" placeholder="Novo Email" class="form-control" />
+                <input asp-for="Email" placeholder="Novo Email" class="form-control"  data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Novo Email").Descricao"/>
                 <span asp-validation-for="Email" class="text-danger"></span>
                 <div class=" help-block"></div>
-                <input asp-for="Morada" placeholder="Novo Morada" class="form-control" />
+                <input asp-for="Morada" placeholder="Nova Morada" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Nova Morada").Descricao" />
                 <span asp-validation-for="Morada" class="text-danger"></span>
                 <div class=" help-block"></div>
-                <input asp-for="Telefone" placeholder="Telefone" class="form-control" />
+                <input asp-for="Telefone" placeholder="Telefone" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Novo Telefone").Descricao" />
                 <span asp-validation-for="Telefone" class="text-danger"></span>
                 <div class=" help-block"></div>
                 <div class="form-inline">
@@ -50,10 +51,10 @@
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <div class=" help-block"></div>
-                <input asp-for="Password" placeholder="Nova Password" class="form-control">
+                <input asp-for="Password" placeholder="Nova Password" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Nova Password").Descricao">
                 <span asp-validation-for="Password" class="text-danger"></span>
                 <div class=" help-block"></div>
-                <input asp-for="ConfirmPassword" placeholder="Confirmar Nova Password" class="form-control">
+                <input asp-for="ConfirmPassword" placeholder="Confirmar Nova Password" class="form-control"  data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Confirmar Nova Password").Descricao">
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                 <div class=" help-block"></div>
             </div>
