--- a/ProjectoEsw/Views/Home/Register.cshtml
+++ b/ProjectoEsw/Views/Home/Register.cshtml
@@ -1,5 +1,6 @@
-﻿@model ProjectoEsw.Models.Identity.RegisterViewModel;
-@addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@inject ProjectoEsw.GestorAplicacao.GestorAjudas gestorAjudas;
+@addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers;
+@model ProjectoEsw.Models.Identity.RegisterViewModel;
 
 @section links {
     <a asp-area="" asp-controller="Home" asp-action="RecuperarPassword" class="btn btn-link btn-xs pull-right">Recuperar Password</a>
@@ -15,28 +16,28 @@
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <div class=" help-block"></div>
-                <input asp-for="NomeCompleto" placeholder="Nome Completo" class="form-control" data-toggle="popover" data-trigger="hover" data-content="Neste campo é inserido o seu nome pessoal(Joao Soares Inácio)"/>
+                <input asp-for="NomeCompleto" placeholder="Nome Completo" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.Register","Nome Completo").Descricao"/>
                 <span asp-validation-for="NomeCompleto" class="text-danger" ></span>
                 <div class=" help-block"></div>
-                <input asp-for="DataNasc" class="form-control"  data-toggle="popover" data-trigger="hover" data-content="Neste campo é onde sera inserido a sua data de nascimento(DD/MM/AAAA)"/>
+                <input asp-for="DataNasc" class="form-control"  data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.Register","Data Nascimento").Descricao"/>
                 <span asp-validation-for="DataNasc" class="text-danger"></span>
                 <div class=" help-block"></div>
-                <input asp-for="Nif" placeholder="Numero de Identifição fiscal" class="form-control"  data-toggle="popover" data-trigger="hover" data-content="Neste campo é inserido o seu numero de identificacao fiscal(NIF)"/>
+                <input asp-for="Nif" placeholder="Numero de Identifição fiscal" class="form-control"  data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.Register","NIF").Descricao"/>
                 <span asp-validation-for="Nif" class="text-danger"></span>
                 <div class=" help-block"></div>
-                <input asp-for="NumeroIdentificacao" placeholder="Numero de Identifição" class="form-control"  data-toggle="popover" data-trigger="hover" data-content="Neste campo é inserido o seu numero de identificacao da faculdade(130111222)"/>
+                <input asp-for="NumeroIdentificacao" placeholder="Numero de Identifição" class="form-control"  data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.Register","Numero Identificação").Descricao)"/>
                 <span asp-validation-for="NumeroIdentificacao" class="text-danger"></span>
                 <div class=" help-block"></div>
-                <input asp-for="Telefone" placeholder="Numero de Telefone" class="form-control"  data-toggle="popover" data-trigger="hover" data-content="Neste campo é inserido o seu numero de telemovel(+351969999999)" />
+                <input asp-for="Telefone" placeholder="Numero de Telefone" class="form-control"  data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.Register","Numero Telefone").Descricao" />
                 <span asp-validation-for="Telefone" class="text-danger"></span>
                 <div class=" help-block"></div>
-                <input asp-for="Email" placeholder="Email" class="form-control"  data-toggle="popover" data-trigger="hover" data-content="Neste campo é inserido o seu email pessoal(exemplo@exemplo.com) " />
+                <input asp-for="Email" placeholder="Email" class="form-control"  data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.Register","Email").Descricao" />
                 <span asp-validation-for="Email" class="text-danger"></span>
                 <div class=" help-block"></div>
-                <input asp-for="Password" placeholder="Password" class="form-control"  data-toggle="popover" data-trigger="hover" data-content="Neste campo é inserido a password para o login(Exemplo12345)">
+                <input asp-for="Password" placeholder="Password" class="form-control"  data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.Register","Password").Descricao">
                 <span asp-validation-for="Password" class="text-danger"></span>
                 <div class=" help-block"></div>
-                <input asp-for="ConfirmPassword" placeholder="Confirmar Password" class="form-control"  data-toggle="popover" data-trigger="hover" data-content="Neste campo é necessario novamente a inserção da password por motivos de seguranca">
+                <input asp-for="ConfirmPassword" placeholder="Confirmar Password" class="form-control"  data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.Register","Confirmar password").Descricao">
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
