--- a/ProjectoEsw/Views/Candidato/EditarPerfil.cshtml
+++ b/ProjectoEsw/Views/Candidato/EditarPerfil.cshtml
@@ -15,19 +15,30 @@
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <div class=" help-block"></div>
-                <input asp-for="Email" placeholder="Novo Email" class="form-control"  data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Novo Email").Descricao"/>
-                <span asp-validation-for="Email" class="text-danger"></span>
+                <input asp-for="Nif" placeholder="Nova NIF" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Nova Morada").Descricao" />
+                <span asp-validation-for="Nif" class="text-danger"></span>
                 <div class=" help-block"></div>
-                <input asp-for="Morada" placeholder="Nova Morada" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Nova Morada").Descricao" />
-                <span asp-validation-for="Morada" class="text-danger"></span>
+                <input asp-for="NumeroIdentificacao" placeholder="Novo Numero de Identificação" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Nova Morada").Descricao" />
+                <span asp-validation-for="NumeroIdentificacao" class="text-danger"></span>
                 <div class=" help-block"></div>
-                <input asp-for="Telefone" placeholder="Telefone" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Novo Telefone").Descricao" />
+                <input asp-for="MoradaRua" placeholder="Nova Rua" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Nova Morada").Descricao" />
+                <span asp-validation-for="MoradaRua" class="text-danger"></span>
+                <div class=" help-block"></div>
+                <input asp-for="MoradaCodigoPostal" placeholder="Novo Codigo Postal" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Nova Morada").Descricao" />
+                <span asp-validation-for="MoradaCodigoPostal" class="text-danger"></span>
+                <div class=" help-block"></div>
+                <input asp-for="MoradaConcelho" placeholder="Novo Concelho" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Nova Morada").Descricao" />
+                <span asp-validation-for="MoradaConcelho" class="text-danger"></span>
+                <div class=" help-block"></div>
+                <input asp-for="MoradaDistrito" placeholder="Novo Distrito" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Nova Morada").Descricao" />
+                <span asp-validation-for="MoradaDistrito" class="text-danger"></span>
+                <div class=" help-block"></div>
+                <input asp-for="Telefone" placeholder="Novo Telefone" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Home.EditarPerfil","Novo Telefone").Descricao" />
                 <span asp-validation-for="Telefone" class="text-danger"></span>
                 <div class=" help-block"></div>
                 <div class="form-inline">
                     <h5 class="pull-left">Foto</h5>
-                    <input type="file" name="files" class="pull-right" />
-                   
+                    <input type="file" name="files" class="pull-right" />                 
                 </div>
             </div>
             <div class="form-group">
