--- a/ProjectoEsw/Views/Candidato/Perfil.cshtml
+++ b/ProjectoEsw/Views/Candidato/Perfil.cshtml
@@ -34,15 +34,80 @@
         </div>
     </div>
     <div class="col-sm-12">
-        <label asp-for="Morada" class="col-sm-3 control-label"></label>
+        <label asp-for="Genero" class="col-sm-3 control-label"></label>
         <div class="col-sm-offset-3">
-            @if (@Model.Morada == null)
+            @if (@Model.Genero == null)
             {
                 <h5>Sem Informação</h5>
             }
             else
             {
-                <h5> @Model.Morada</h5>
+                <h5> @Model.Genero</h5>
+            }
+        </div>
+    </div>
+    <div class="col-sm-12">
+        <label asp-for="Nacionalidade" class="col-sm-3 control-label"></label>
+        <div class="col-sm-offset-3">
+            @if (@Model.Nacionalidade == null)
+            {
+                <h5>Sem Informação</h5>
+            }
+            else
+            {
+                <h5> @Model.Nacionalidade</h5>
+            }
+        </div>
+    </div>
+    <div class="col-sm-12">
+        <label asp-for="MoradaRua" class="col-sm-3 control-label"></label>
+        <div class="col-sm-offset-3">
+            @if (@Model.MoradaRua == null)
+            {
+                <h5>Sem Informação</h5>
+            }
+            else
+            {
+                <h5> @Model.MoradaRua</h5>
+            }
+        </div>
+    </div>
+    <div class="col-sm-12">
+        <label asp-for="MoradaCodigoPostal" class="col-sm-3 control-label"></label>
+        <div class="col-sm-offset-3">
+            @if (@Model.MoradaCodigoPostal == null)
+            {
+                <h5>Sem Informação</h5>
+            }
+            else
+            {
+                <h5> @Model.MoradaCodigoPostal</h5>
+            }
+        </div>
+    </div>
+    <div class="col-sm-12">
+        <label asp-for="MoradaConcelho" class="col-sm-3 control-label"></label>
+        <div class="col-sm-offset-3">
+            @if (@Model.MoradaConcelho == null)
+            {
+                <h5>Sem Informação</h5>
+            }
+            else
+            {
+                <h5> @Model.MoradaConcelho</h5>
+            }
+        </div>
+    </div>
+    <div class="col-sm-12">
+        <label asp-for="MoradaDistrito" class="col-sm-3 control-label"></label>
+        <div class="col-sm-offset-3">
+            @if (@Model.MoradaDistrito == null)
+            {
+                <h5>Sem Informação</h5>
+            }
+            else
+            {
+                <h5> @Model.MoradaDistrito</h5>
             }
         </div>
     </div>
