--- a/ProjectoEsw/Views/Shared/_Layout.cshtml
+++ b/ProjectoEsw/Views/Shared/_Layout.cshtml
@@ -44,8 +44,9 @@
                             </button>
                             <span class="visible-xs navbar-brand">Sidebar menu</span>
                         </div>
+                        <!-- render section fazer-->
                         <div class="well text-center" role="button">
-                            <a asp-area="" asp-controller="Candidato" asp-action="Index">Home</a>
+                            <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </div>  
                         <div class="well text-center" role="button">
                             Programas Mobilidade
@@ -66,7 +67,6 @@
             </div>
         </div>
     </div>
-    @RenderSection("Calendario",false);
 
     <div class="container body-content">
         <hr />
