--- a/ProjectoEsw/Views/Candidato/Index.cshtml
+++ b/ProjectoEsw/Views/Candidato/Index.cshtml
@@ -6,7 +6,7 @@
     <a asp-area="" asp-controller="Candidato" asp-action="Perfil" class="btn btn-link btn-xs pull-right"> @Html.DisplayFor(Model=> Model.Email) </a>
     
     }
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="9000" >
+<div id="myCarousel" class="carousel slide col-sm-8" data-ride="carousel" data-interval="9000" >
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
