--- a/ProjectoEsw/Views/Shared/Calendario.cshtml
+++ b/ProjectoEsw/Views/Shared/Calendario.cshtml
@@ -50,9 +50,7 @@
 
                         <label>Fim</label>
                         <div class="input-group date" id="dtp2">
-                            <input type="datetime-local" id="FimInput" class="form-control" />
-                            <span class="input-group-addon" />
-                            <span class="glyphicon glyphicon-calendar" />
+                            <input type="text" id="FimInput" class="form-control" />
                         </div>
 
                         <label>Descrição:</label>
