--- a/ProjectoEsw/Views/Home/Error.cshtml
+++ b/ProjectoEsw/Views/Home/Error.cshtml
@@ -11,6 +11,6 @@
 
 <div class="jumbotron">
     <h2 class=" text-center"><strong>Erro</strong></h2>
-    <p><strong>Aconteceu um erro ao fazer o login </strong></p>
+    <p><strong>Aconteceu um erro inesperado, volte a tentar novamente </strong></p>
     <a asp-area="" asp-controller="Home" asp-action="Index" class="btn btn-link btn-xs text-center">Voltar Pagina Inicial</a>
 </div>
