--- a/ProjectoEsw/Views/Shared/Calendario.cshtml
+++ b/ProjectoEsw/Views/Shared/Calendario.cshtml
@@ -37,7 +37,7 @@
                 <h4 class="modal-title"><span id="eventoTitulo"></span></h4>
             </div>
             <div class="modal-body">
-                <form class="form-horizontal">
+                <div class="form-horizontal">
                     <div class="form-group">
 
                         <label>Titulo</label>
@@ -66,7 +66,7 @@
                             <button id ="btnSave" class="btn btn-success"><span class="glyphicon glyphicon-ok"></span> Salvar Evento</button>
                         </div>
                     </div>
-                </form>
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Fechar</button>
