--- a/ProjectoEsw/Views/Home/Error.cshtml
+++ b/ProjectoEsw/Views/Home/Error.cshtml
@@ -8,7 +8,9 @@
     <a asp-area="" asp-controller="Home" asp-action="Register" class="btn btn-link btn-xs pull-right">Registar</a>
     <a asp-area="" asp-controller="Home" asp-action="Login" class="btn btn-link btn-xs pull-right">Login</a>
 }
-
+@section Home {
+    <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+}
 <div class="jumbotron">
     <h2 class=" text-center"><strong>Erro</strong></h2>
     <p><strong>Aconteceu um erro inesperado, volte a tentar novamente </strong></p>
