--- a/ProjectoEsw/Views/Home/Login.cshtml
+++ b/ProjectoEsw/Views/Home/Login.cshtml
@@ -5,8 +5,9 @@
     <a asp-area="" asp-controller="Home" asp-action="RecuperarPassword" class="btn btn-link btn-xs pull-right">Recuperar Password</a>
     <a asp-area="" asp-controller="Home" asp-action="Register" class="btn btn-link btn-xs pull-right">Registar</a>
     <a asp-area="" asp-controller="Home" asp-action="Login" class="btn btn-link btn-xs pull-right">Login</a>
-    @Html.ActionLink("home", "login", "algo");
-
+}
+@section Home {
+<a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
 }
 
 <div class="jumbotron col-sm-10 col-sm-offset-1">
