--- a/ProjectoEsw/Views/Home/index.cshtml
+++ b/ProjectoEsw/Views/Home/index.cshtml
@@ -7,6 +7,9 @@
     <a asp-area="" asp-controller="Home" asp-action="Register" class="btn btn-link btn-xs pull-right">Registar</a>
     <a asp-area="" asp-controller="Home" asp-action="Login" class="btn btn-link btn-xs pull-right">Login</a>
  }
+@section Home {
+<a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+}
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="9000">
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
