--- a/ProjectoEsw/Views/Home/ResetPassword.cshtml
+++ b/ProjectoEsw/Views/Home/ResetPassword.cshtml
@@ -9,7 +9,9 @@
     <a asp-area="" asp-controller="Home" asp-action="Login" class="btn btn-link btn-xs pull-right">Login</a>
 }
 
-
+@section Home {
+    <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+}
 <div class="jumbotron col-sm-10 col-sm-offset-1">
     <div class="container col-lg-offset-2 col-sm-8">
         <h2 class="text-center">@ViewData["Title"]</h2>
